@@ -1,3 +1,11 @@
+2008-10-08  Mark Rowe  <mrowe@apple.com>
+
+        Rubber-stamped by Jon Honeycutt.
+
+        Remove restriction on version number ending in a 4.
+
+        * win/tools/scripts/auto-version.sh:
+
 2008-10-07  Anders Carlsson  <andersca@apple.com>
 
         Reviewed by Mitz Pettel.
